partial/force-app/main/default/objects/Project_Unit_Type__c/Project_Unit_Type__c.object-meta.xml
<CustomObject>
    <label>Project Unit Type</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Unit Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>