partial/force-app/main/default/objects/Project_Unit_Type__c/fields/No_of_Available_Units__c.field-meta.xml
<CustomField>
    <fullName>No_of_Available_Units__c</fullName>
    <label>No. of Available Units</label>
    <summaryFilterItems>
        <field>Unit__c.Unit_Availability__c</field>
        <operation>equals</operation>
        <value>Available</value>
    </summaryFilterItems>
    <summaryForeignKey>Unit__c.Project_Unit_Type__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>