partial/force-app/main/default/objects/Project_Unit_Type__c/fields/Project_Unity_Type_DB_Id__c.field-meta.xml
<CustomField>
    <fullName>Project_Unity_Type_DB_Id__c</fullName>
    <externalId>true</externalId>
    <label>Project Unity Type DB Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>