partial/force-app/main/default/objects/Project_Unit_Type__c/fields/Square_Meter_Min__c.field-meta.xml
<CustomField>
    <fullName>Square_Meter_Min__c</fullName>
    <label>Square Meter (Min)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>