partial/force-app/main/default/objects/Project_Unit_Type__c/fields/UnitsAvailability__c.field-meta.xml
<CustomField>
    <fullName>UnitsAvailability__c</fullName>
    <formula>IF(
    No_of_Available_Units__c &gt; 0, 
    &apos;Units Available&apos;,
    IF(
    No_of_Available_Units__c = 0 &amp;&amp; No_of_Sold_Units__c &gt; 0, 
    &apos;All Units Sold&apos;,
    &apos;Units Not Uploaded Yet&apos;
    )
)</formula>
    <label>Units Availability</label>
    <type>Text</type>
</CustomField>