partial/force-app/main/default/objects/Project_Unit_Type__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Unit_Type__c</columns>
    <columns>No_of_Available_Units__c</columns>
    <columns>No_of_Sold_Units__c</columns>
    <columns>UnitsAvailability__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>